--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             const formData = new FormData(form);
             const params = new URLSearchParams(formData).toString();
             const encodedParams = btoa(params);
-            window.location.href = `live.html?data=${encodedParams}`;
+            window.location.href = `live2.html?data=${encodedParams}`;
         }
     </script>
 </head>
